# RAG-Project3

./: .gitattributes  .gitignore  Architecture.docx.doc  README.md  Results.docx  diagram.md  pyproject.toml  requirements.txt  ~$chitecture.docx  ~$chitecture.docx.doc
data/: ingestion_registry.json
docs/: ~$chitecture-description.docx
src/: chunking.py  config.yaml  config_loader.py  doc_output.json  embedding.py  generation.py  graph.py  ingestion.py  logging_config.py  main.py  node.py  pipeline.py  state.py
src/cache/: __init__.py  base.py  embeddding_cache.py  sqlite_backend.py
src/qdrant_db/: meta.json
src/qdrant_db/collection/rag_demo/: storage.sqlite
ui/: index.html  package-lock.json  package.json
ui/src/: App.tsx  styles.css
